헤더 링크 연결 끝

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,7 +74,7 @@ li {
 /* 드롭다운 메뉴 */
 .dropdown {
   position: absolute;
-  top: 100%;
+  top: 76px;
   left: 0;
   background-color: #ffffff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -84,20 +84,25 @@ li {
   min-width: 200px;
   padding: 10px 0;
   z-index: 1000;
+  border: 1px solid #ddd;
 }
 
 /* 드롭다운 항목 */
 .dropdown-item {
+  position: relative;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: 500;
   color: #333;
   cursor: pointer;
   transition: background-color 0.2s ease;
+  margin-bottom: 2px;
 }
 
 .dropdown-item:hover {
   background-color: #d399ee;
+  color: #fff;
+  transition: all 0.3s;
 }
 
 /* 메뉴 옵션 */
@@ -111,8 +116,8 @@ li {
 }
 
 .dropdown-right {
-  position: relative;
-  left: 100%;
+  position: absolute;
+  /* left: 100%; */
   background-color: #ddd;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -121,6 +126,9 @@ li {
   min-width: 200px;
   padding: 10px 0;
   z-index: 1000;
+  left: 100%;
+  top: 0;
+  background-color: #fff;
 }
 
 /* 드롭다운 항목 */
@@ -130,5 +138,13 @@ li {
   font-weight: 500;
   color: #333;
   cursor: pointer;
+  background-color: #fff;
   transition: background-color 0.2s ease;
+  margin-bottom: 2px;
+}
+
+.dropdown-item-right:hover {
+  background-color: #E0C3ED;
+  color: #fff;
+  transition: all 0.3s;
 }
